[package]
name = "digital_audio_rustation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audioengine = { path = "./audioengine" }
#gui = { path = "./gui" }
egui = "0.22.0"
eframe = "0.22.0"
env_logger = "0.10.0"
